<resources>
    <string name="app_name">KotlinDagger</string>
    <string name="registration_dagger">Register to Dagger World!</string>
    <string name="welcome_dagger">Welcome to Dagger World!</string>
    <string name="tcs">Terms and Conditions</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="unregister">Unregister</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="refresh_notifications">Refresh Notifications</string>
    <string name="error_login">Error logging you in. Try again</string>
    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
        qui officia deserunt mollit anim id est laborum.</string>
</resources>